--- a/main.css
+++ b/main.css
@@ -143,8 +143,9 @@ footer #logo {
 footer .col-sm-10 {
   font-size: 20px; 
   color: white;
-  margin: 0 auto;
   text-align: center;
+  position: relative;
+  left: 7.5%;
 }
 
 footer ul {
